# mkdoc-poc

./: .gitignore  README.md  deploy.sh  pyproject.toml
docs/docs/: another_page.md  index.md
src/: __init__.py
